--- a/lesson-3/task4/task4.csproj
+++ b/lesson-3/task4/task4.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{88ADCD35-CFCC-4484-815B-D3598A74424C}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>test4</RootNamespace>
-    <AssemblyName>test4</AssemblyName>
+    <RootNamespace>task4</RootNamespace>
+    <AssemblyName>task4</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
