--- a/lesson-4/task3/task3.csproj
+++ b/lesson-4/task3/task3.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{49742FE9-E591-4DCE-8AB6-896278C37F8D}</ProjectGuid>
+    <ProjectGuid>{1FE1DF89-5894-413C-BE8E-114330469C35}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>test3_asterisk_</RootNamespace>
-    <AssemblyName>task3%28asterisk%29</AssemblyName>
+    <RootNamespace>task3</RootNamespace>
+    <AssemblyName>task3</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
