--- a/FileManager/Properties/Settings.settings
+++ b/FileManager/Properties/Settings.settings
@@ -2,7 +2,7 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="FileManager.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="numberOfItemsPerPage" Type="System.UInt32" Scope="Application">
+    <Setting Name="numberOfItemsPerPage" Type="System.UInt32" Scope="User">
       <Value Profile="(Default)">20</Value>
     </Setting>
   </Settings>
