--- a/FileManager/App.config
+++ b/FileManager/App.config
@@ -13,6 +13,9 @@
             <setting name="numberOfItemsPerPage" serializeAs="String">
                 <value>20</value>
             </setting>
+            <setting name="saveCurrentDir" serializeAs="String">
+                <value />
+            </setting>
         </FileManager.Properties.Settings>
     </userSettings>
 </configuration>
