--- a/FileManager/Properties/Settings.settings
+++ b/FileManager/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="numberOfItemsPerPage" Type="System.UInt32" Scope="User">
       <Value Profile="(Default)">20</Value>
     </Setting>
+    <Setting Name="saveCurrentDir" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
