сохранение позиции курсора при выходе исправлена ошибка в навигации

--- a/FileManager/App.config
+++ b/FileManager/App.config
@@ -19,6 +19,12 @@
             <setting name="installPath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="posList" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="shiftList" serializeAs="String">
+                <value>0</value>
+            </setting>
         </FileManager.Properties.Settings>
     </userSettings>
     <applicationSettings>
